tests/cli/manage/snapshots/cli__manage__transitions__transition_case_T10.snap
---
source: tests/cli/manage/transitions.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature is now unmanaged by GHerrit.
