tests/cli/manage/snapshots/cli__manage__transitions__transition_case_T16.snap
---
source: tests/cli/manage/transitions.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] [WARN] Configuration drift detected for branch feature.
[gherrit] [WARN] The current git configuration does not match the expected state for a private branch.
[gherrit] [WARN]   - pushRemote: current='drifted-remote', expected='.'
[gherrit] [WARN] Overwriting manual changes (--force).
[gherrit] Branch feature is now unmanaged by GHerrit.
