tests/cli/manage/snapshots/cli__manage__transitions__transition_case_T18.snap
---
source: tests/cli/manage/transitions.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature is now managed by GHerrit in public mode.
[gherrit]   - 'git push' will sync PRs and will also push feature itself.
